Implement shutdown function.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(SocketExample)
 set(CMAKE_CXX_STANDARD 11)
 
 # Add the server executable
-add_executable(server server.cpp ServerSocket.hpp ServerSocket.cpp)
+add_executable(server server.cpp ServerSocket.hpp ServerSocket.cpp ServerDriver.hpp ServerDriver.cpp)
 
 # Add the client executable
 add_executable(client client.cpp ClientSocket.hpp ClientSocket.cpp)
