Make server and client interact with each other continously.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 
 project(SocketExample)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_COMPILER "C:\\MinGW\\bin\\g++.exe")
+
+set(CMAKE_CXX_STANDARD 17)
 
 # Add the server executable
 add_executable(server server.cpp ServerSocket.hpp ServerSocket.cpp ServerDriver.hpp ServerDriver.cpp)
